Closed Bug 544656 Opened 16 years ago Closed 16 years ago

fixing "keepAtoms can be used uninitialized" warning for js_GC()

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- alpha2+
status1.9.2 --- ?
status1.9.1 --- ?

People

(Reporter: igor, Assigned: igor)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

The changes for the bug 541790 has triggered a warning with GCC: /home/igor/m/tm/js/src/jsgc.cpp:2873: warning: ‘keepAtoms’ may be used uninitialized in this function It should be fixed to minimize warning noise.
Attached patch fixSplinter Review
Attachment #425638 - Flags: review?(brendan)
Comment on attachment 425638 [details] [diff] [review] fix >+ bool keepAtoms = (gckind & GC_KEEP_ATOMS) || (rt->gcKeepAtoms != 0); No need to parenthesize the != 0 expression. r=me with that picked. /be
Attachment #425638 - Flags: review?(brendan) → review+
blocking2.0: alpha1 → ?
Whiteboard: fixed-in-tracemonkey
blocking2.0: ? → alpha2
This got merged to m-c at some point, marking it FIXED to get it off the alpha2 radar.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: