bug 544656 - fixing keepAtoms warning with GCC. r=brendan